Fix small spacing issue on leaderboard

--- a/src/partial-styles/_leaderboard.scss
+++ b/src/partial-styles/_leaderboard.scss
@@ -102,7 +102,7 @@
 
       .leaderboard-row {
         .lb-player-icon-and-name {
-          padding: 7px 10px !important;
+          padding: 8px 10px !important;
         }
       }
     }
